# gb-emu

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml  clang-format.yml  codeql.yml
src/: main.cpp
src/common/: types.h
src/core/bus/: bus.cpp  bus.h
src/core/cartridge/: cartridge.cpp  cartridge.h
src/core/cpu/: cpu.cpp  cpu.h  registers.h
src/platform/sdl/: application.cpp  application.h  window.cpp  window.h
